# sae-c

./: .gitignore  CMakeCache.txt  README.md  annuaire5000.txt  explication.txt  main.c  tempCodeRunnerFile.c  test.csv
Code/: CMakeLists.txt  main.c
Code/lib/: addclient.c  delete.c  displayallclients.c  displayemptyclients.c  edit.c  filter.c  loadclients.c  menu.c  modify.c  save.c  search.c  sort.c  utils.c
Code/lib/headers/: addclient.h  delete.h  displayallclients.h  displayemptyclients.h  edit.h  filter.h  loadclients.h  menu.h  save.h  search.h  sort.h  utils.h
